--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: WDIO Serverless Container
 
 # Controls when the action will run.
 on:
@@ -20,57 +20,29 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
+    name: Build and deploy container
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    env:
+      IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}
     steps:
-      - name: Checkout the code
+      - name: Login
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_email: ${{ secrets.GCP_EMAIL }}
+          service_account_key: ${{ secrets.GCP_CREDENTIALS }}
+
+      - name: Configure Docker
+        run: gcloud auth configure-docker --quiet
+
+      - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Build docker and run tests
-        run: "make ci-up"
+      - name: Build Docker image
+        run: docker build . --tag $IMAGE_NAME
 
-      - name: Get allure history
-        uses: actions/checkout@v2
-        if: always()
-        continue-on-error: true
-        with:
-          ref: gh-pages
-          path: gh-pages
+      - name: Push Docker image
+        run: docker push $IMAGE_NAME
 
-      - name: Setup allure report
-        uses: simple-elf/allure-report-action@master
-        if: always()
-        id: allure-report
-        with:
-          allure_results: allure-results
-          allure_history: allure-history
-          keep_reports: 20
-
-      - name: Deploy report to Github Pages
-        if: always()
-        uses: peaceiris/actions-gh-pages@v2
-        env:
-          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: allure-history
-
-        # Need to enable IMAP for this step to success
-        # https://support.google.com/mail/answer/7126229?hl=en
-        # And allow less secure apps
-        # https://myaccount.google.com/lesssecureapps
-        # Display unlock captcha
-        # https://accounts.google.com/b/0/DisplayUnlockCaptcha
-      #- name: Send CI build status in mail
-      #  if: always()
-      #  uses: dawidd6/action-send-mail@v3
-      #  with:
-      #    server_address: smtp.gmail.com
-      #    server_port: 465
-      #    username: ${{ secrets.EMAIL_USERNAME }}
-      #    password: ${{ secrets.EMAIL_PASSWORD }}
-      #    subject: Github actions for ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
-      #    body: On ${{ github.event_name }} ${{ github.job }} job in workflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
-      #    to: madhankumaravelu93@gmail.com
-      #    from: Madhan K
+      - name: Deploy Docker image
+        run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image $IMAGE_NAME --region us-central1 --platform managed --allow-unauthenticated
