feat: added github action to check out code

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
       IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}
       REGION: us-central1
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Login
         uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
