--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker build . --tag $IMAGE_NAME
+        run: docker build --tag $IMAGE_NAME .
 
       - name: Push Docker image
         run: docker push $IMAGE_NAME
