fix: refference of env variables

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     name: Build and deploy container
     runs-on: ubuntu-latest
     env:
-      IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}
+      IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ github.sha }}
       REGION: us-central1
     steps:
       - name: Checkout
@@ -43,10 +43,15 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker build --tag $IMAGE_NAME .
+        run: docker build --tag ${{ env.IMAGE_NAME }} .
 
       - name: Push Docker image
         run: docker push $IMAGE_NAME
 
       - name: Deploy Docker image
-        run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image $IMAGE_NAME --region $REGION --platform managed --allow-unauthenticated
+        run: |-
+          gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} \
+            --image ${{ env.IMAGE_NAME }} \
+            --region ${{ env.REGION }} \
+            --platform managed \
+            --allow-unauthenticated
