--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -2,7 +2,7 @@ steps:
   # This step builds the container image.
   - id: "Build e2e docker image"
     name: "gcr.io/cloud-builders/docker"
-    args: ["build", "-t", "gcr.io/$PROJECT_ID/e2e:$SHORT_SHA", "."]
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/e2e", "."]
 
   # This step pushes the image to Container Registry
   # The PROJECT_ID and SHORT_SHA variables are automatically
@@ -11,7 +11,7 @@ steps:
     id: "Push docker image to container registry"
     args:
       - "push"
-      - "gcr.io/$PROJECT_ID/e2e:$SHORT_SHA"
+      - "gcr.io/$PROJECT_ID/e2e"
 
   # This step deploys the new version of our container image
   # in the Kubernetes Engine cluster.
@@ -19,9 +19,9 @@ steps:
     id: "Deploy selenosis setup"
     entrypoint: "bash"
     args:
-      - "sh ./selenosis-deploy/script.sh"
-    env:
-      - "CLOUDSDK_COMPUTE_ZONE=us-central1-b"
+      - "-c"
+      - |
+        "sh ./selenosis-deploy/script.sh"
 
   - name: "gcr.io/cloud-builders/kubectl"
     id: "Deploy e2e"
