--- a/e2e-test.yml
+++ b/e2e-test.yml
@@ -8,7 +8,7 @@ spec:
     spec:
       containers:
         - name: e2e
-          imagePullPolicy: Never
+          imagePullPolicy: IfNotPresent
           image: gcr.io/wdio-gke/e2e:latest
           resources:
             limits:
