--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -21,7 +21,7 @@ steps:
     args:
       - "-c"
       - |
-        gcloud container clusters create _CUSTOM_CLUSTER --num-nodes=1 --machine-type=e2-standard-4
+        gcloud container clusters create $_CUSTOM_CLUSTER --num-nodes=1 --machine-type=e2-standard-4
 
     env:
       - CLOUDSDK_COMPUTE_ZONE=$_CUSTOM_ZONE
