--- a/e2e-test.yml
+++ b/e2e-test.yml
@@ -12,11 +12,11 @@ spec:
           image: gcr.io/wdio-gke/e2e:latest
           resources:
             limits:
-              cpu: "0.25"
-              memory: "500Mi"
+              cpu: "2"
+              memory: "2Gi"
             requests:
-              cpu: "0.05"
-              memory: "400Mi"
+              cpu: "1"
+              memory: "1Gi"
       dnsPolicy: ClusterFirst
       restartPolicy: Never
       terminationGracePeriodSeconds: 0
