--- a/e2e-test.yml
+++ b/e2e-test.yml
@@ -7,8 +7,8 @@ spec:
   template:
     spec:
       initContainers:
-        - name: "Check hub status"
-          image: nikolovdragan/multi-purpose-toolbox:latest
+        - name: hub-status
+          image: nikolovdragan/multi-purpose-toolbox
           command: [
           'sh', 
           '-c',
