fix: added init contianers with 5 minutes sleep

--- a/e2e-test.yml
+++ b/e2e-test.yml
@@ -6,6 +6,10 @@ metadata:
 spec:
   template:
     spec:
+      initContainers:
+        - name: init-wait
+          image: alpine
+          command: ["sh", "-c", "sleep 5m"]
       containers:
         - name: e2e
           imagePullPolicy: IfNotPresent
