--- a/selenosis-deploy/07-pre-pull-images.yml
+++ b/selenosis-deploy/07-pre-pull-images.yml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: pre-pull-browser-images
-  #namespace: selenosis
+  namespace: selenosis
 spec:
   ttlSecondsAfterFinished: 10
   parallelism: 2
