--- a/selenosis-deploy/03-selenosis.yaml
+++ b/selenosis-deploy/03-selenosis.yaml
@@ -43,8 +43,8 @@ spec:
           name: selenosis
           resources:
             limits:
-              cpu: "0.5"
-              memory: "512Mi"
+              cpu: "1"
+              memory: "1Gi"
             requests:
               cpu: "0.2"
               memory: "128Mi"
