--- a/e2e-test.yml
+++ b/e2e-test.yml
@@ -4,6 +4,7 @@ metadata:
   name: e2e
   namespace: selenosis
 spec:
+  backoffLimit: 0
   template:
     metadata:
       labels:
@@ -18,7 +19,7 @@ spec:
               cpu: "2"
               memory: "2Gi"
             requests:
-              cpu: "1"
+              cpu: "0.5"
               memory: "512Mi"
       dnsPolicy: ClusterFirst
       restartPolicy: Never
